[project]
name = "nautilus_trader"
version = "1.212.0"
description = "A high-performance algorithmic trading platform and event-driven backtester"
authors = [
    {name = "Nautech Systems", email = "info@nautechsystems.io"},
]
license = {text = "LGPL-3.0-or-later"}
readme = "README.md"
requires-python = "<3.13,>=3.11"
dependencies = [
    "click<9.0.0,>=8.1.8",
    "fsspec<2025.0.0,>=2024.12.0",
    "msgspec<1.0.0,>=0.19.0",
    "numpy>=1.26.4",
    "pandas<3.0.0,>=2.2.3",
    "pyarrow>=19.0.0",
    "pytz>=2025.1.0",
    "tqdm<5.0.0,>=4.67.1",
    "uvloop<1.0.0,>=0.21.0; sys_platform != \"win32\"",
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
]

[project.urls]
homepage = "https://nautilustrader.io"
repository = "https://github.com/nautechsystems/nautilus_trader"
docs = "https://nautilustrader.io/docs"

[build-system]
requires = [
    "setuptools>=75",
    "poetry-core>=2.0.1",
    "numpy>=1.26.4",
    "cython==3.1.0a1",
]
# For now we use the poetry build backend until uv supports custom build scripts
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.setuptools]
packages = ["nautilus_trader"]
include-package-data = true

[tool.setuptools.package-data]
nautilus_trader = [
    "**/*.so",
    "**/*.pyd",
    "**/*.pyi",
    "py.typed",
]

[tool.setuptools.package-dir]
nautilus_trader = "nautilus_trader"

[project.optional-dependencies]
betfair = [
    "betfair-parser==0.14.2",
]
ib = [
    "defusedxml<1.0.0,>=0.7.1",
    "nautilus-ibapi==10.19.4",
]
docker = [
    "docker<8.0.0,>=7.1.0",
]
dydx = [
    "v4-proto==7.0.5",
    "grpcio==1.68.1",
    "protobuf==5.29.1",
    "bech32<2.0.0,>=1.2.0",
    "ecdsa<1.0.0,>=0.19.0",
    "bip-utils<3.0.0,>=2.9.3",
    "pycryptodome<4.0.0,>=3.20.0",
]
polymarket = [
    "py-clob-client<1.0.0,>=0.20.0",
]

[dependency-groups]
dev = [
    "cython==3.1.0a1",
    "setuptools>=75",
    "black<26.0.0,>=25.1.0",
    "docformatter<2.0.0,>=1.7.5",
    "mypy<2.0.0,>=1.15.0",
    "pandas-stubs<3.0.0,>=2.2.2",
    "pre-commit<5.0.0,>=4.1.0",
    "requests<3.0.0,>=2.32.3",
    "ruff<1.0.0,>=0.9.5",
    "types-pytz<2025.0,>=2024.2",
    "types-requests<3.0,>=2.32",
    "types-toml<1.0.0,>=0.10.2",
]
test = [
    "coverage<8.0.0,>=7.6.11",
    "pytest<8.0.0,>=7.4.4",
    "pytest-aiohttp<2.0.0,>=1.1.0",
    "pytest-asyncio==0.21.1",
    "pytest-benchmark<5.0.0,>=4.0.0",
    "pytest-codspeed<4.0.0,>=3.2.0",
    "pytest-cov<5.0.0,>=4.1.0",
    "pytest-mock<4.0.0,>=3.14.0",
    "pytest-xdist[psutil]<4.0.0,>=3.6.1",
]
docs = [
    "numpydoc<2.0.0,>=1.8.0",
    "linkify-it-py<3.0.0,>=2.0.3",
    "myst-parser<5.0.0,>=4.0.0",
    "sphinx-comments<1.0.0,>=0.0.3",
    "sphinx-markdown-builder<1.0.0,>=0.6.8",
]

[tool.isort]  # Used by legacy isort for Cython modules
py_version = "311"
skip_glob = ["**/core/rust/*"]
combine_as_imports = true
line_length = 100
ensure_newline_before_comments = true
force_single_line = true
include_trailing_comma = true
multi_line_output = 3
lines_after_imports = 2
use_parentheses = true
filter_files = true

[tool.black]
target_version = ["py311", "py312"]
line_length = 100

[tool.docformatter]
black = true
make-summary-multi-line = true
pre-summary-new-line = true
blank = true
recursive = true
in-place = true

[tool.ruff]
target-version = "py311"
line-length = 150  # Reduce to 100

exclude = [
    ".benchmarks",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint]
select = [
    "C4",
    "E",
    "F",
    "W",
    "C90",
    "D",
    # "DTZ",
    "UP",
    "S",
    "T10",
    "ICN",
    "PIE",
    # "PT",
    "PYI",
    "Q",
    "I",
    "RSE",
    "TID",
    # "SIM",
    # "ARG",
    # "ERA",
    "PD",
    # "PGH",
    # "PLW",
    "NPY",
    "RUF",
]

ignore = [
    "D100",  # Missing docstring in public module  **fix**
    "D101",
    "D102",  # Missing docstring in public method  **fix**
    "D103",  # Missing docstring in public function  **fix**
    "D104",  # Missing docstring in public package  **fix**
    "D107",
    "D105",
    "D200",  # One-line docstring should fit on one line with quotes (optional style)
    "D203",  # 1 blank line required before class docstring (optional style)
    "D205",  # 1 blank line required between summary line and description (optional style)
    "D212",  # Multi-line docstring summary should start at the first line (optional style)
    "D400",  # First line should end with a period (not always a first line)
    "D413",  # Missing blank line after last section ('Parameters')
    "D415",  # First line should end with a period, question mark, or exclamation point (not always a first line)
    "D416",  # Section name should end with a colon ('Warnings:', not 'Warnings') (incorrect?)
    "E741",  # Ambiguous variable name (single char)
    "PD901", # `df` is a bad variable name. Be kinder to your future self
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "S101",  # Use of assert detected (OK in test suite)
    "S105",  # Use of hard-coded password (spurious)
    "S106",  # Use of hard-coded password (spurious)
    "S113",  # Probable use of requests call without timeout **fix**
    "S603",  # `subprocess` call: check for execution of untrusted input **fix**
]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]

unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
force-single-line = true
single-line-exclusions = ["typing"]
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"test_perf_logger.py" = ["S311"]

[tool.mypy]
python_version = "3.11"
disallow_incomplete_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
no_strict_optional = false
warn_no_return = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
no_strict_optional = true
module = [
    "examples/*",
    "nautilus_trader/adapters/betfair/*",
    "nautilus_trader/adapters/binance/*",
    "nautilus_trader/adapters/interactive_brokers/*",
    "nautilus_trader/indicators/ta_lib/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --new-first --failed-first --doctest-modules --doctest-glob=\"*.pyx\""
asyncio_mode = "strict"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
plugins = ["Cython.Coverage"]
source = ["nautilus_trader"]
omit = [
    "nautilus_trader/adapters/*",
    "nautilus_trader/examples/*",
    "nautilus_trader/test_kit/*",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
