[package]
name = "nautilus-trader"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core crates for the Nautilus trading engine"
documentation.workspace = true
publish = false # Do not publish to crates.io
